syntax = "proto3";

import "common/model/model.proto";
import "tests/v1/model/model.proto";

option java_multiple_files = true;
option java_package = "com.voteva.tests.grpc.model.v1";


message GGetTestCategoriesResponse {
    repeated string categories = 1;
}

message GGetAllTestsResponse {
    GPage page = 1;
    repeated GTestInfo tests = 2;
}

message GGetTestsByCategoryResponse {
    GPage page = 1;
    repeated GTestInfo tests = 2;
}

message GGetTestResponse {
    GTestInfo testInfo = 1;
}

message GAddTestResponse {
    GUuid testUid = 1;
}
